remove prefer dark mode - fix transparent bg

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,8 @@ html,
 body {
   padding: 0;
   margin: 0;
+  background-color: black;
+  color: white;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   overflow-x: hidden;
@@ -19,16 +21,6 @@ a {
 
 * {
   box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
 }
 
 /* Hide scrollbar for WebKit (Chrome, Safari) */
